--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,23 @@ li a {
   margin-top: 20px;
 }
 
+.status-container {
+  padding: 5% 0 3% 5%;
+  height: 20vh;
+  position: relative;
+  clear: both;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffff;
+  flex-wrap: wrap;
+}
+
+.status-container:first-child {
+  margin-top: 20px;
+}
+
 .svg {
   width: 2.5rem;
   fill: #ffff;
