--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -126,7 +126,7 @@ h2{
     padding: 14px 20px;
     font-family: Ubuntu;
     font-size: larger;
-
+    text-align: center;
 }
 
 #password1:hover{
@@ -145,38 +145,9 @@ input[type=text] {
     background-color: #f5f6f7;
     text-align: center; 
 }
-input[type=file] {
-    border-radius: 5px;
-    border-color: #f5f5f5;
-    border-width: 1px;
-    margin: 5px;
-    width: 70%;
-    padding: 10px 15px;
-    font-family: Ubuntu;
-    font-size: medium; 
-    background-color: #f5f6f7; 
-}
-#profilepicture_button{
-    background-color: #1877f2;
-    color: white;
-    border-radius: 5px;
-    border-width: 1px;
-    margin: 5px;
-    width: 20%;
-    padding: 5px 5px;
-    font-family: Ubuntu;
-    font-size: large;
-    font-weight: 400;
-}
-
-#picture_label{
-    font-family: Ubuntu;
-    font-size: large;
-    font-weight: 400;
-}
 
 #signup_form{
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -196,9 +167,36 @@ input[type=file] {
 .signup_row{
     display: flex;
     align-content: space-around;
-    margin: 0px 15px;
+    margin: 10px 15px;
 }
 
+#first_name{
+    width: 50%;
+}
+#last_name{
+    width: 50%;
+}
+#email2{
+    width: auto;
+}
+#password2{
+    width: auto;
+}
+#dob{
+    width: auto;
+}
+#country{
+    width: auto;
+}
+#city{
+    width: auto;
+}
+#street{
+    width: auto;
+}
+.input{
+    width: 100%;
+}
 
 @media only screen and (max-width:1300px){
 
