--- a/styles.css
+++ b/styles.css
@@ -35,14 +35,14 @@ a {
   margin-left: 1rem;
 }
 
-.searchBar {
+.searchbar {
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-#searchQueryInput {
+#searchinput {
   width: 100%;
   height: 2.5rem;
   background: #f5f5f5;
@@ -53,7 +53,8 @@ a {
   font-size: 1rem;
 }
 
-#searchQuerySubmit {
+#searchsubmit {
+  all: unset;
   width: 3.5rem;
   height: 2.8rem;
   margin-left: -3.5rem;
@@ -62,7 +63,7 @@ a {
   outline: none;
 }
 
-#searchQuerySubmit:hover {
+#searchsubmit:hover {
   cursor: pointer;
 }
 
@@ -116,7 +117,7 @@ li a {
 }
 
 .friend-container {
-  padding: 5% 0 3% 5%;
+  padding: 2% 0 5% 5%;
   height: 20vh;
   position: relative;
   clear: both;
@@ -133,14 +134,14 @@ li a {
 }
 
 .status-container {
-  padding: 5% 0 3% 5%;
-  height: 20vh;
+  padding: 5% 10% 1% 10%;
   position: relative;
   clear: both;
   border-radius: 20px;
   margin-bottom: 20px;
   align-items: center;
   justify-content: center;
+  text-align: center;
   background-color: #ffff;
   flex-wrap: wrap;
 }
@@ -149,15 +150,19 @@ li a {
   margin-top: 20px;
 }
 
+.status-row {
+  margin: 2rem 2rem 2rem 2rem;
+}
+
 .svg {
   width: 2.5rem;
   fill: #ffff;
 }
 
-.svg-2 {
+.profile-img {
   width: 2.5rem;
-  fill: #ffff;
   margin-right: 2rem;
+  border-radius: 50%;
 }
 
 .sidenav-icons {
@@ -199,7 +204,8 @@ li a {
 }
 
 .accept-btn,
-.unblock-btn {
+.unblock-btn,
+.add-btn {
   width: 8rem;
   height: 3rem;
   background-color: #ffff;
@@ -215,12 +221,14 @@ li a {
 }
 
 .accept-btn:active,
-.unblock-btn:active {
+.unblock-btn:active,
+.add-btn:active {
   transform: translateY(-5px);
 }
 
 .accept-btn:hover,
-.unblock-btn:hover {
+.unblock-btn:hover,
+.add-btn:hover {
   color: #fff;
   background-color: #00cd67;
   font-size: 1em;
@@ -294,4 +302,30 @@ li a {
 
 .fullname {
   font-size: 1.5rem;
+}
+
+.friend-img {
+  width: 5rem;
+  margin-right: 1rem;
+  border-radius: 50%;
+}
+
+.friend-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.friend-row-status {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.time-row {
+  position: absolute;
+  padding-top: 2rem;
+  right: 2rem;
+  bottom: 0.2rem;
 }
