--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -147,7 +147,7 @@ input[type=text] {
 }
 
 #signup_form{
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
